# CrewAI-TicTacToe

./: README.md  pyproject.toml
src/tic_tac_toe/: __init__.py  crew.py  main.py
src/tic_tac_toe/config/: agents.yaml  tasks.yaml
