[project]
name = "tic_tac_toe"
version = "0.1.0"
description = "tic_tac_toe using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.76.2,<1.0.0"
]

[project.scripts]
tic_tac_toe = "tic_tac_toe.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
